[package]
name = "pgdb-lib-rs"
version = "0.1.2"
edition = "2021"
description= "A simple database wrapper for "
license = "MIT"
keywords = ["postgres", "database", "wrapper" , "postgres-library"]
categories = ["database-utilities", "database-wrapper"]
exclude = ["/.idea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std + native-tls
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "json" ] }
dotenvy = "0.15.5"
thiserror = "1.0.37"
tokio-test = "0.4.2"

